--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "b64-to-blob": "^1.2.19",
     "canvas-to-image": "^2.0.0",
+    "country-state-city": "^0.0.5",
     "dotenv": "^6.1.0",
     "html2canvas": "^1.0.0-alpha.12",
     "mixpanel-browser": "^2.22.4",
