--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scroll-to-component": "^1.0.2",
     "react-scrollspy": "^3.3.5",
     "react-select": "^2.1.1",
+    "react-snap": "^1.19.0",
     "react-stripe-elements": "^2.0.1",
     "react-validate-form": "^1.0.6",
     "redux": "^4.0.0",
