--- a/package.json
+++ b/package.json
@@ -41,5 +41,11 @@
     "eject": "react-scripts eject",
     "postbuild": "react-snap"
   },
-  "proxy": "http://localhost:5000/"
+  "proxy": "https://guarded-headland-87063.herokuapp.com/",
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
