--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "styled-components": "^3.4.5",
     "validator": "^10.7.1"
   },
+  "proxy": "https://guarded-headland-87063.herokuapp.com",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
